# fastnotepad-to-obsidian

./: CHANGELOG.md  README.md  pyproject.toml
examples/: README.md  sample_export
scripts/: fastnotepad2obsidian.py
src/fastnotepad_to_obsidian/: __init__.py  cli.py  converter.py
tests/: conftest.py  test_converter.py
